--- a/client/views/todo.html
+++ b/client/views/todo.html
@@ -12,6 +12,9 @@
       Content is required.
     </span>
   </div>
+  {{newTodo.content}}
+  <input ng-model='CJG' />
+<p>{{CJG}}</p>
   <button class="btn btn-default" ng-disabled="todoForm.$invalid">Add</button>
 </form>
 <hr>
