--- a/client/views/editpassage.html
+++ b/client/views/editpassage.html
@@ -1,6 +1,11 @@
-<h1>Edit Your Passsage</h1>
-<form ng-submit="editpage()">
-	title:<input type='text' ng-model='passage.title'/> <br />
-	content:<input type = 'text' ng-model = 'passage.content' /> <br />
-	<button>Submit</button>
-</form>
+<h1>Edit Your Passage</h1>
+<div class="md-whiteframe-5dp p20" layout-align="center" layout='column'>
+	<form ng-submit="editpage()" name='Passage'>
+		<md-input-container class='md-block md-title'>
+			<label>标题</label>
+			<input type="text" ng-model="passage.title" required/>
+		</md-input-container>
+		<textarea  rows='5' cols='155' ng-model = 'passage.content' required/>
+		<md-button type = 'submit' class='md-block md-raised md-primary' ng-disabled="Passage.$invalid">确认修改</md-button>
+	</form>
+</div>
