--- a/client/views/home.html
+++ b/client/views/home.html
@@ -1,4 +1,7 @@
-<h1>Hello, this is your mainpage</h1>
-<div ui-view="profile"></div>
-<div ui-view="edit-profile"></div>
-<div ui-view='passages'></div>
+<div class='main'>
+	<h1>Hello, this is your mainpage</h1>
+	<div layout='row'>
+		<div ui-view='passages' layout='column' flex class='passagesPage'></div>
+		<div ui-view="profile" flex='30' class='profilePage'></div>
+	</div>
+</div>
