--- a/client/views/passages.html
+++ b/client/views/passages.html
@@ -1,4 +1,4 @@
-<div class="md-whiteframe-5dp">
+<div class="md-whiteframe-5dp p10">
 	<h1>Your Passage:</h1>
 	<div ng-repeat="passage in passages">
 		<div class='md-title passage'>
@@ -7,4 +7,4 @@
 		<md-button class="md-primary md-raised" ng-click="edit(passage.id)">编辑</md-button>
 		<md-button ng-click="remove(passage.id)" class="md-warn md-raised m10">删除</md-button>
 	</div>
-</div>
+</div
