--- a/client/views/edit-profile.html
+++ b/client/views/edit-profile.html
@@ -1,5 +1,18 @@
-<h1>Edit your profiles</h1>
-<form ng-submit="submit()">
-	用户名:<input ng-model="user.email" />
-	<button type="submit">提交</button>
-</form>
+<md-content class='md-whiteframe-1dp mt20 md-title' layout-padding layout-wrap flex='60'>
+	<h1>Edit your profiles</h1>
+	<form ng-submit="submit()" name="edit">
+		<md-input-container class="md-block">
+			<label>用户名</label>
+			<input ng-model="user.username"/>
+		</md-input-container class="md-block">
+		<md-input-container class="md-block">
+			<label>手机</label>
+			<input ng-model='user.phone' />
+		</md-input-container class="md-block">
+		<md-input-container class="md-block">
+			<label>QQ</label>
+			<input ng-model="user.QQ" />
+		</md-input-container class="md-block">
+		<md-button type="submit" ng-disabled="edit.$invalid" class="md-primary md-raised md-hue-1">确定修改</button>
+	</form>
+</md-content>
