增加了评论显示

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -125,3 +125,11 @@ body {
 textarea {
 	resize: none;
 }
+
+/*.forbidden {
+	margin-top: 100px;
+	margin-right: auto;
+	margin-left: auto;
+	width: 400px;
+	height: 200px;
+}*/
