--- a/client/views/forbidden.html
+++ b/client/views/forbidden.html
@@ -1,4 +1,4 @@
-<div class="md-whiteframe-5dp mt20 p20" layout='column'>
+<div class="md-whiteframe-5dp mt20 p20 forbidden" layout='column'>
 	<h2>你必须先登陆了才能评论</h2>
 	<a ui-sref='login' class="md-title">点击这里登陆,或者等3秒自动跳转到登陆界面</a>
 </div>
